force-app/main/default/objects/Unit_Block_Request__c/Unit_Block_Request__c.object-meta.xml
<CustomObject>
    <description>Requests from executives to managers for unit blocking approval</description>
    <label>Unit Block Request</label>
    <nameField>
        <displayFormat>UBR-{00000}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unit Block Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>