force-app/main/default/objects/Unit_Block_Request__c/fields/Is_Management_Block__c.field-meta.xml
<CustomField>
    <fullName>Is_Management_Block__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Management Block</label>
    <type>Checkbox</type>
</CustomField>