force-app/main/default/objects/Unit_Block_Request__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead__c</referenceTo>
    <relationshipLabel>Unit Block Requests</relationshipLabel>
    <relationshipName>Unit_Block_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>