force-app/main/default/objects/Unit_Block_Request__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Unit Block Requests</relationshipLabel>
    <relationshipName>Unit_Block_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>