force-app/main/default/objects/Unit_Block_Request__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Block_Requests_Made</relationshipName>
    <type>Lookup</type>
</CustomField>