force-app/main/default/objects/Unit_Block_Request__c/fields/Response_Notes__c.field-meta.xml
<CustomField>
    <fullName>Response_Notes__c</fullName>
    <label>Response Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>