force-app/main/default/objects/Unit_Block_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>Project__c</columns>
    <columns>Unit__c</columns>
    <columns>Block_Duration_Days__c</columns>
    <columns>Block_Reason__c</columns>
    <columns>Requested_By__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>